[fix] nonaktifkan no wrap pada table

--- a/resources/scss/volt/components/_tables.scss
+++ b/resources/scss/volt/components/_tables.scss
@@ -27,7 +27,7 @@
   td,
   th {
       font-size: $table-body-font-size;
-      white-space: nowrap;
+    //   white-space: nowrap;
   }
 
   // User Table
